style.css
* {
    -ms-overflow-style: none;  /* Internet Explorer 10+ */
    scrollbar-width: none;  /* Firefox */
}

*::-webkit-scrollbar { 
    display: none;  /* Safari and Chrome */
}

body {
    background-color: palegoldenrod;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    overflow: scroll;
    -webkit-transition: background-color 300ms linear;
    -ms-transition: background-color 300ms linear;
    transition: background-color 300ms linear;
}

.backgroundText {
    cursor: default;
    -webkit-transition: color 300ms linear;
    -ms-transition: color 300ms linear;
    transition: color 300ms linear;
    position: absolute;
}

#title {
    top: 0.7vw;
	font-size: 1.2vw;
    left: calc(50% - 48.15%);
}

#state {
	font-size: 3.2vw;
    margin: 0;
    top: 2.8vw;
    left: calc(50% - 48.15%);
}

#substate {
    font-size: 1.6vw;
    margin: 0;
    top: 6.8vw;
    left: calc(50% - 48.15% + 0.16%);
}

.metaButton {
    position: absolute;
    top: 0vw;
}

#thebrick {
    left: 11.6vw;
}

#load {
    font-size: 1vw;
    text-align: center;
    position: absolute;
    top: 0.8vw;
    left: calc(50% - 37%);
}

#game {
    width: 10%;
    position: absolute;
    top: 0.8vw;
    left: calc(50% - 48.15% + 0.16%);
}

.controlButton {
    font-size: 0.88vw;
    width: calc(6%);
    margin-left: calc((100% - 6%) / 2);
    margin-top: 1.6vw;
    z-index: 10;
    position: absolute;
}

#ready {
    font-size: 0.88vw;
    width: calc(6%);
    margin-left: calc((100% - 6%) / 2);
    margin-top: 1.6vw;
    z-index: 10;
    position: absolute;
    left: -4%;
    top: 48.15vw;
}

#recruit {
    left: 12vw;
    top: 48.96vw;
}

#upgrade {
    left: -12vw;
    top: 48.96vw;
}

#autofill {
    left: 4vw;
    top: 48.15vw;
}

#reset {
    width: 1.6vw;
    margin-left: calc(50% - 1.4vw);
    top: 51.52vw;
    padding-left: .08vw;
    padding-right: .08vw;
    margin-top: 0;
}

#progressbar {
    width: 16vw;
    top: 8.83vw;
    position: absolute;
    margin-left: calc((100% - 16vw) / 2);
    height: 0.4vw;
    display: none;
    left: 0;
    background: lightgreen;
}

#progress {
    background: darkgray;
    float: right;
}

.screen {
    position: absolute;
    top: 10%;
    left: 10%;
    width: 80%;
    height: 80%;
    background: gray;
    z-index: 999;
    overflow: scroll;
}

#thebrick-screen {
    display: flex;
    flex-direction: row;
    overflow: auto;
}

#recruit-limit {
    width: 100%;
    text-align: left;
    font-size: 1.2vw;
    padding-left: 15.4vw;
}

#achievements-progress {
    width: 100%;
    text-align: center;
    font-size: 1.6vw;
    height: 3vw;
    font-style: italic;
}

.difficulty {
    font-size: 1.5vw;
    padding: 0.5vw 1vw;
    width: 10vw;
    margin-left: calc((100% - 30vw)/4);
}

.difficultysub {
    font-size: 1vw;
    padding: 0.5vw 0vw;
    width: 10vw;
    margin-left: calc((100% - 30vw)/4);
    font-style: italic;
    text-align: center;
    display: inline-block;
    vertical-align: top;
}

.newgameLabel {
    width: 100%;
    text-align: center;
    font-size: 1.6vw;
    padding-top: 5vw;
    font-weight: bold;
}

#difficulty-label {
    height: 5vw;
}

#challengeslabel {
    width: 100%;
    margin-left: 0;
}

.challenge {
    width: 33%;
    text-align: center;
    font-size: 1.6vw;
    padding: 2vw 0vw;
    display: inline-block;
    vertical-align: top;
}

.challengeButton {
    text-align: center;
    font-size: 1.5vw;
    padding: 0.5vw 1vw;
    margin: 1vw 0vw;
    vertical-align: bottom;
}

.label {
    right: calc(50% - 48.15vw);
    display:inline-block;
    width: 14.45vw;
    text-align: right;
}

#ammolabel {
    top: 2.4vw;
}

#foodlabel {
    top: 4.41vw;
    width: auto;
}

#hopelabel {
    top: 6.42vw;
}

.number {
    display: inline;
    width:100%;
    font-weight: bold;
    -webkit-transition: color 300ms linear;
    -ms-transition: color 300ms linear;
    transition: color 300ms linear;
}

#feed {
    padding: 0.3vw 0.4vw;
}

.bar {
	background: red;
}

.bar-fill {
    background: green;
    height: 100%;
}

.closeButton {
    margin: .16vw;
    display: block;
    font-size: 1.6vw;
}

.ami .bar {
    width: 3.2vw;
	height: 0.8vw;
	position: static;
	margin-left: calc((100% - 3.2vw) / 2);
}

.ami .bar-fill {
	position: static;
}

.enemy .bar {
    width: 2vw;
	height: 0.48vw;
	position: static;
	margin-left: calc((100% - 2vw) / 2);
}

.enemy .bar-fill {
	position: static;
}

.barricade {
    background-clip: content-box;
    background-color: brown;
    transition: background 0.05s ease-in-out;
    position: absolute;
    height: 16vw;
    display: inline-block;
    text-align: center;
    padding-top: 30px;
    padding-bottom: 30px;
    margin-top: -30px;
    margin-bottom: -30px;
    filter: brightness(110%);
}

.chanvrerie {
    width: calc(32.1vw/3);
    top: 32.1vw;
}

#chanvrerie1 {
    left: calc(50% - (32.1vw/3)/2*3);
}

#chanvrerie2 {
    left: calc(50% - (32.1vw/3)/2);
}

#chanvrerie3 {
    left: calc(50% + (32.1vw/3)/2);
}

.mondetour {
    width: 9.63vw;
    transform: skewY(-20deg);
}

#mondetour1 {
    top: 39.33vw;
    right: calc(50% + (32.1vw/3)/2*3 + 14.77vw);
}

#mondetour2 {
    top: 42.82vw;
    right: calc(50% + (32.1vw/3)/2*3 + 24.40vw);
}

.precheurs {
    width: 9.63vw;
    height: 4vw;
    transform: skewY(20deg);
}

#precheurs2 {
    top: 54.86vw;
    right: calc(50% - (32.1vw/3)/2*3 - 34.03vw);
}

#precheurs1 {
    top: 51.36vw;
    right: calc(50% - (32.1vw/3)/2*3 - 24.40vw);
}

.building {
    position: absolute;
    top: 9.63vw;
    width: 16vw;
    height: 41.73vw;
    display: inline-block;
    overflow: scroll;
    text-align: center;
}

#corinthe {
    background: teal;
    left: calc(50% - (32.1vw/3)/2*3 - 16vw);
}

#rightside {
    background: grey;
    left: calc(50% + (32.1vw/3)*1.5);
}
/* ... */

